tinyc/test/good/pragma-week.c
#pragma pb111 week 01

int main()
{
    return 0;
}
