tinyc/test/bad/false-redeclare-field.c
struct s
{
    int false;
};
int main()
{
    return 0;
}
